@@ -1,5 +1,10 @@
 2006-06-29  Raphaël Quinet  <raphael@gimp.org>
 
+	* plug-ins/common/screenshot.c (select_window_x11): allow the
+	usage of Escape together with CapsLock, NumLock and ScrollLock.
+
+2006-06-29  Raphaël Quinet  <raphael@gimp.org>
+
 	* plug-ins/common/screenshot.c (select_window_x11): use 0 instead
 	of AnyModifer in the call to XGrabKey.  This prevented the
 	cancellation of the screenshot with Escape in some environments.
